// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<RichText /> parses a title with item icon 1`] = `
<div>
  <span
    class="rich-textstyles__RichTextWrapper-sc-1hmb2ya-0 huDzTU"
  >
     
    <img
      class="item-iconstyles__ItemIconWrapper-sc-16iffik-0 llnkpE"
      data-testid="item-icon"
      name="transport-belt"
      src="https://api.local.factorio.tech/assets/icon/64/item/transport-belt.png"
      type="item"
    />
    <span>
       build name
    </span>
  </span>
</div>
`;

exports[`<RichText /> parses a title with multiple item icons 1`] = `
<div>
  <span
    class="rich-textstyles__RichTextWrapper-sc-1hmb2ya-0 huDzTU"
  >
     
    <img
      class="item-iconstyles__ItemIconWrapper-sc-16iffik-0 llnkpE"
      data-testid="item-icon"
      name="transport-belt"
      src="https://api.local.factorio.tech/assets/icon/64/item/transport-belt.png"
      type="item"
    />
    <span>
       build name 
    </span>
    <img
      class="item-iconstyles__ItemIconWrapper-sc-16iffik-0 llnkpE"
      data-testid="item-icon"
      name="fast-transport-belt"
      src="https://api.local.factorio.tech/assets/icon/64/item/fast-transport-belt.png"
      type="item"
    />
  </span>
</div>
`;
